# Installer

./: .replit  LICENSE  README.md  pyproject.toml  requirements.txt
cyber_config/: cyber.py
cyber_installer/: __init__.py  __main__.py  astring.py  language.py
cyber_installer/language/: AZ.cyberjson  EN.cyberjson  IN.cyberjson  TR.cyberjson  UZ.cyberjson
