[tool]
[tool.poetry]
name = "CyberUserBot_Deployer"
version = "3.0"
description = "Automatic Deploy CyberUserBot to Heroku"
authors = ["FVREED"]
[tool.poetry.dependencies]
python = "^3.8"
bs4 = "*"
gitpython = "*"
heroku3 = "*"
requests = "*"
rich = "*"
telethon = "*"
barcode = "^1.0.1"
google-api-python-client = "^2.14.0"
sickrage = "^10.0.11"
pydub = "^0.25.1"
aiohttp = "^3.7.4"
cowpy = "^1.1.0"
spotify-token = "^1.0.0"
aria2p = "^0.10.4"
humanize = "^3.10.0"
search-engine-parser = "^0.6.2"
PyDrive = "^1.3.1"
pySmartDL = "^1.3.4"
fonttools = "^4.25.1"
python-dotenv = "^0.19.0"
httplib2 = "^0.19.1"
lyricsgenius = "^3.0.1"
pytz = "^2021.1"
twitter-scraper = "^0.4.4"
urbandict = "^0.6.1"
chromedriver-autoinstaller = "^0.2.2"
pyaztro = "^0.3"
selenium = "^3.141.0"
gTTS = "^2.2.3"
SQLAlchemy = "^1.4.22"
pylast = "^4.2.1"
wikipedia = "^1.4.0"
blkmautrix = "^0.0.18"
oauth2client = "^4.1.3"
sqlalchemy-json = "^0.4.0"
pymongo = "^3.12.0"
Markdown = "^3.3.4"
googletrans = "^3.0.0"
speedtest-cli = "^2.1.3"
pybase64 = "^1.1.4"
emoji = "^1.4.1"
youtube_dl = "^2021.6.6"
